<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.ahli</groupId>
	<artifactId>galaxy-lib</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- version definitions -->
		<lombok.version>1.18.30</lombok.version>
		<asm.version>9.6</asm.version>
		<eclipse-collection.version>12.0.0.M3</eclipse-collection.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-configuration2.version>2.9.0</commons-configuration2.version>
		<commons-text.version>1.11.0</commons-text.version><!-- dependency of configuration2 -->
		<commons-lang3.version>3.13.0</commons-lang3.version><!-- dependency of configuration2 -->
		<!--		<vtd-xml.version>2.13.4</vtd-xml.version>-->
		<aalto-xml.version>1.3.2</aalto-xml.version>
		<junit-jupiter.version>5.10.1</junit-jupiter.version>
		<equalsverifier.version>3.15.3</equalsverifier.version>
		<slf4j.version>2.0.9</slf4j.version>
		<annotations.version>24.1.0</annotations.version>
	</properties>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<release>${java.version}</release>
					<excludes>
						<!-- excludes files from being put into same path as classes -->
						<exclude>**/*.txt</exclude>
					</excludes>
					<encoding>UTF-8</encoding>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<!--<compilerArg>&#45;&#45;enable-preview</compilerArg>-->
						<compilerArg>-Xlint:all</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- Force requirement of Maven version -->
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-enforcer-plugin -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>[3.2.5,)</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- check for plugin and dependency updates:
		 		versions:display-plugin-updates versions:display-parent-updates versions:display-dependency-updates versions:display-property-updates
			 -->
			<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.3.2</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.1</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<!--<argLine>&#45;&#45;enable-preview</argLine>-->
					<properties>
						<!-- run tests in parallel -->
						<configurationParameters>
							junit.jupiter.execution.parallel.enabled = true
							junit.jupiter.execution.parallel.mode.default = concurrent
							junit.jupiter.execution.parallel.mode.classes.default = concurrent
						</configurationParameters>
					</properties>
				</configuration>
				<dependencies>
					<dependency>
						<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>${asm.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-site-plugin -->
				<artifactId>maven-site-plugin</artifactId>
				<version>4.0.0-M11</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
			</plugin>

			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>8.4.3</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- logging facade -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- logging implementation (during tests) -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- high performance xml parser -->
		<!-- https://mvnrepository.com/artifact/com.ximpleware/vtd-xml -->
		<!--		<dependency>-->
		<!--			<groupId>com.ximpleware</groupId>-->
		<!--			<artifactId>vtd-xml</artifactId>-->
		<!--			<version>${vtd-xml.version}</version>-->
		<!--		</dependency>-->
		<dependency>
			<groupId>com.fasterxml</groupId>
			<artifactId>aalto-xml</artifactId>
			<version>${aalto-xml.version}</version>
		</dependency>

		<!-- read ini files -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>${commons-configuration2.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>${commons-beanutils.version}</version>
		</dependency>

		<!-- high performance collections (less memory used) -->
		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections</artifactId>
			<version>${eclipse-collection.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>${equalsverifier.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- less boilerplate code -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>
		<!-- code analysis annotations -->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>${annotations.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- update dependencies within configuration2 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${commons-text.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>

			<!-- update stax2-api used in aalto-xml -->
			<dependency>
				<groupId>org.codehaus.woodstox</groupId>
				<artifactId>stax2-api</artifactId>
				<version>4.2.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>